[gd_scene load_steps=6 format=2]

[ext_resource path="res://Data/Textures/Resources/wood.png" type="Texture" id=1]
[ext_resource path="res://Data/Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/UI/Ingredient.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Ingredient" type="HBoxContainer"]
margin_right = 116.0
margin_bottom = 64.0
rect_min_size = Vector2( 116, 64 )
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputButton" type="Button" parent="."]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 1 )
expand_icon = true

[node name="AmountLabel" type="Label" parent="InputButton"]
margin_left = 24.0
margin_top = 44.0
margin_right = 62.0
margin_bottom = 63.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 8
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 68.0
margin_top = 8.0
margin_right = 111.0
margin_bottom = 56.0
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 43.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "Need"

[node name="RequiredLabel" type="Label" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 43.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "1000"

[connection signal="pressed" from="InputButton" to="." method="_on_InputButton_pressed"]
